Them load hinh anh cua them hinh anh

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -410,6 +410,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <script src="~/js/Category.js"></script>
     <script src="~/js/javascript.js"></script>
+    <script src="~/js/Editproduct.js"></script>
     <script src="~/js/Home.js"></script>
     <script src="~/js/Total.js"></script>
     <script src="~/js/Product.js"></script>
