--- a/Web/Views/Home/InfoProduct.cshtml
+++ b/Web/Views/Home/InfoProduct.cshtml
@@ -235,4 +235,7 @@
             });
         }
     });
+        function changeImage(imagePath) {
+        document.getElementById("mainImage").src = imagePath;
+    }
 </script>
