--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -106,6 +106,9 @@
                                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-blue-600 group-hover:w-full transition-all duration-300"></span>
                                 </a>
                             </li>
+                            <li>
+                                @await Component.InvokeAsync("Category")
+                            </li>
                         </ul>
                     </div>
 
