--- a/Web/Views/Shared/Components/Category/Default.cshtml
+++ b/Web/Views/Shared/Components/Category/Default.cshtml
@@ -1,12 +1,10 @@
 ﻿@model List<Application.Entities.Category>
-<a class=" dropdown-toggle" style="float:left" href="#" id="navbarDropdownMenuLink" role="button"
-       data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="fas fa-users"></i>
-        Danh Muc
-    </a>
-    <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-        @foreach (var item in Model)
-        {
-        <a class="dropdown-item nav-link" asp-area="" asp-controller="Product" asp-route-type_id="@item.type_id" asp-action="ProductCate"> @item.type_name</a>
-        }
-    </ul>
+@foreach (var item in Model)
+{
+    <li>
+        <a asp-controller="Home" asp-action="ProductCate" asp-route-id="@item.type_id" class="text-gray-700 hover:text-blue-600 text-lg font-medium relative group py-2">
+            @item.type_name
+            <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-blue-600 group-hover:w-full transition-all duration-300"></span>
+        </a>
+    </li>
+}
