--- a/Web/Views/Shared/Components/Category/Default.cshtml
+++ b/Web/Views/Shared/Components/Category/Default.cshtml
@@ -1,18 +1,16 @@
 ﻿@model List<Application.Entities.Category>
 <div class="relative inline-block text-left">
     <button type="button"
-            class="inline-flex items-center justify-center gap-2 px-5 py-2.5 text-black transition-all duration-200 focus:outline-none  focus:ring-offset-2"
+            class="mt-2.5 text-gray-700 hover:text-blue-600 text-lg font-medium relative group py-2 inline-flex items-center justify-center gap-2 transition-all duration-200 focus:outline-none focus:ring-offset-2"
             id="menu-button" aria-expanded="true" aria-haspopup="true">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M3 6h18"></path>
-            <path d="M3 12h18"></path>
-            <path d="M3 18h18"></path>
-        </svg>
+
         <span>Danh Mục</span>
         <svg class="h-5 w-5 transition-transform duration-200" id="dropdown-arrow" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.24 4.24a.75.75 0 01-1.06 0L5.25 8.27a.75.75 0 01-.02-1.06z" clip-rule="evenodd" />
         </svg>
+        <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-blue-600 group-hover:w-full transition-all duration-300"></span>
     </button>
+
 
 
     <div id="dropdownMenu"
